--- a/pebble-slider.html
+++ b/pebble-slider.html
@@ -17,7 +17,7 @@
                 border: solid 1px #a0a0a0;
             }
 
-            .pebble-slider.ps-wrap .ps-base .ps-toggle-neck {
+            .pebble-slider.ps-wrap .ps-toggle-neck {
                 width: 20px;
                 height: 20px;
                 border-radius: 20px;
@@ -25,222 +25,318 @@
         </style>
         <!-- <link rel="stylesheet" type="text/css" href="pebble-slider.css" /> -->
         <style type="text/css">
-/* Pebble Slider Default Styles */
+/* Pebble Slider default styles */
 .pebble-slider {
-    display: inline-block;
-    height: 10px;
-    width: 150px;
+    background-color: pink;
 }
-.pebble-slider.disabled {
-    opacity: 0.5;
+
+.pebble-slider.ps-wrap .ps-range-rail {
+    border: solid 1px #a0a0a0;
 }
-.pebble-slider.ps-wrap .ps-base .ps-range-rail {
-    background-color: #d0d0d0;
+
+.pebble-slider .ps-range-bar {
+    background-color: #c0c0c0;
 }
-.pebble-slider.ps-wrap .ps-base .ps-range-bar {
-    background-color: #a0a0a0;
-}
+
 .pebble-slider .ps-toggle-neck {
-    height: 10px;
-    width: 10px;
-    background-color: #404040;
+    background-color: black;
+    opacity: 0.65;
 }
+
 .pebble-slider .ps-toggle-handle {
     display: block;
     width: 100%;
     height: 100%;
 }
+
 .pebble-slider.ps-horizontal-type {
     height: 20px;
+    padding: 0 10px;
     width: 300px;
 }
-.pebble-slider.ps-horizontal-type .ps-range-rail {
-    bottom: 25%;
-    top: 25%;
-}
-.pebble-slider.ps-horizontal-type .ps-range-subrail {
-    left: 5px;
-    right: 5px;
-    top: 0;
-}
-.pebble-slider.ps-horizontal-type .ps-range-bar {
-    left: auto;
-    opacity: 1;
-    right: 100%;
-    top: 0;
-}
-.pebble-slider.ps-horizontal-type .ps-toggle-rail {
-    left: 5px;
-    right: 5px;
-    bottom: 25%;
-    top: 25%;
-}
-.pebble-slider.ps-horizontal-type .ps-toggle-neck {
-    margin-left: -5px;
-}
-.pebble-slider.ps-horizontal-type .ps-base.ps-transition .ps-range-bar {
-    transition: right 0.2s;
-    -moz-transition: right 0.2s;
-    -webkit-transition: right 0.2s;
-    -ms-transition: right 0.2s;
-    -o-transition: right 0.2s;
-}
-.pebble-slider.ps-horizontal-type .ps-base.ps-transition .ps-toggle-neck {
-    transition: left 0.2s;
-    -moz-transition: left 0.2s;
-    -webkit-transition: left 0.2s;
-    -ms-transition: left 0.2s;
-    -o-transition: left 0.2s;
+
+.pebble-slider.ps-horizontal-type .ps-range-sizer {
+    height: 50%;
+    max-height: 100%;
 }
 
-/* Vertical slider */
+.pebble-slider.ps-horizontal-type .ps-range-limiter {
+    left: 10px;
+    right: 10px;
+}
+
+.pebble-slider.ps-horizontal-type .ps-range-bar {
+    right: 50%;
+}
+
+.pebble-slider.ps-horizontal-type .ps-toggle-overlay-and-limiter {
+    left: 10px;
+    right: 10px;
+}
+
+.pebble-slider.ps-horizontal-type .ps-toggle-neck {
+    cursor: pointer;
+    height: 40px;
+    left: 50%;
+    margin-left: -10px;
+    margin-top: -20px;
+    width: 20px;
+}
+
 .pebble-slider.ps-vertical-type {
-    height: 100%;
+    height: 300px;
     padding: 10px 0;
     width: 20px;
 }
-.pebble-slider.ps-vertical-type .ps-range-rail {
-    bottom: 0;
-    left: 25%;
-    right: 25%;
-    top: 0;
-}
-.pebble-slider.ps-vertical-type .ps-range-subrail {
-    bottom: 5px;
-    left: 0;
-    top: 5px;
-    width: 100%;
-}
-.pebble-slider.ps-vertical-type .ps-range-bar {
-    width: 100%;
-    height: 150%;
-    left: 0;
-    top: auto;
-}
-.pebble-slider.ps-vertical-type .ps-toggle-rail {
-    bottom: 5px;
-    left: 25%;
-    right: 25%;
-    top: 5px;
-}
-.pebble-slider.ps-vertical-type .ps-toggle-neck {
-    margin-top: -5px;
-    left: 25%;
-}
-.pebble-slider.ps-vertical-type .ps-base.ps-transition .ps-range-bar {
-    transition: top 0.2s;
-    -moz-transition: top 0.2s;
-    -webkit-transition: top 0.2s;
-    -ms-transition: top 0.2s;
-    -o-transition: top 0.2s;
-}
-.pebble-slider.ps-vertical-type .ps-base.ps-transition .ps-toggle-neck {
-    transition: top 0.2s;
-    -moz-transition: top 0.2s;
-    -webkit-transition: top 0.2s;
-    -ms-transition: top 0.2s;
-    -o-transition: top 0.2s;
+
+.pebble-slider.ps-vertical-type .ps-range-sizer {
+    max-width: 100%;
+    width: 50%;
 }
 
-/* Pebble Slider Essential Styles */
-body span.pebble-slider.ps-wrap {
+.pebble-slider.ps-vertical-type .ps-range-limiter {
+    bottom: 10px;
+    top: 10px;
+}
+
+.pebble-slider.ps-vertical-type .ps-range-bar {
+    top: 50%;
+}
+
+.pebble-slider.ps-vertical-type .ps-toggle-overlay-and-limiter {
+    bottom: 10px;
+    top: 10px;
+}
+
+.pebble-slider.ps-vertical-type .ps-toggle-neck {
+    height: 20px;
+    margin-left: -20px;
+    margin-top: -10px;
+    top: 50%;
+    width: 40px;
+}
+
+/* Pebble Slider strictly-enforced styles */
+
+.pebble-slider {
+    display: inline-block !important;
     position: relative !important;
 }
-body span.pebble-slider.ps-wrap > span.ps-base {
+
+.pebble-slider .ps-subwrap {
+    border: none !important;
+    display: block !important;
+    height: 100% !important;
+    left: 0 !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: absolute !important;
+    top: 0 !important;
+    width: 100% !important;
+}
+
+.pebble-slider .ps-range-overlay {
+    background: none !important;
     border: none !important;
     bottom: 0 !important;
     display: block !important;
-    height: auto !important;
     left: 0 !important;
     margin: 0 !important;
+    overflow: hidden !important;
+    padding: 0 !important;
+    position: absolute !important;
+    right: 0 !important;
+    top: 0 !important;
+}
+
+.pebble-slider .ps-range-base {
+    background: none !important;
+    border: none !important;
+    height: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    width: 100% !important;
+}
+
+.pebble-slider .ps-range-aligner {
+    background: none !important;
+    border: none !important;
+    height: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    /* position relative allows 100% height */
+    position: relative !important;
+    vertical-align: middle !important;
+    width: 100% !important;
+}
+
+.pebble-slider .ps-range-sizer {
+    background: none !important;
+    border: none !important;
+    display: block !important;
+    padding: 0 !important;
+    position: relative !important;
+}
+
+.pebble-slider .ps-range-rail {
+    bottom: 0 !important;
+    display: block !important;
+    left: 0 !important;
+    height: auto !important;
+    margin: 0 !important;
+    overflow: hidden !important;
     padding: 0 !important;
     position: absolute !important;
     right: 0 !important;
     top: 0 !important;
     width: auto !important;
 }
-body span.pebble-slider.ps-wrap > span.ps-base > span.ps-range-rail {
-    display: block !important;
-    margin: 0 !important;
-    overflow: hidden !important;
-    padding: 0 !important;
-    position: absolute !important;
-}
-body span.pebble-slider.ps-wrap > span.ps-base > span.ps-range-rail > span.ps-range-subrail,
-body span.pebble-slider.ps-wrap > span.ps-base > span.ps-range-rail > span.ps-range-subrail > span.ps-range-bar,
-body span.pebble-slider.ps-wrap > span.ps-base > span.ps-toggle-overlay > span.ps-toggle-rail > span.ps-toggle-neck {
-    display: block !important;
-    position: absolute !important;
-}
-body span.pebble-slider.ps-wrap > span.ps-base > span.ps-toggle-overlay {
+
+.pebble-slider .ps-range-limiter {
+    background: none !important;
     border: none !important;
-    bottom: 0 !important;
     display: block !important;
-    left: 0 !important;
     margin: 0 !important;
     padding: 0 !important;
     position: absolute !important;
-    right: 0 !important;
-    top: 0 !important;
 }
-body span.pebble-slider.ps-wrap > span.ps-base > span.ps-toggle-overlay > span.ps-toggle-rail {
+
+.pebble-slider .ps-range-bar {
+    display: block !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: absolute !important;
+}
+
+.pebble-slider .ps-toggle-overlay-and-limiter {
+    background: none !important;
+    border: none !important;
+    display: block !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: absolute !important;
+}
+
+.pebble-slider .ps-toggle-base {
+    background: none !important;
+    border: none !important;
+    width: 100% !important;
+    height: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.pebble-slider .ps-toggle-rail {
+    background: none !important;
+    border: none !important;
+    height: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: relative !important;
+    vertical-align: middle !important;
+    width: 100% !important;
+}
+
+.pebble-slider .ps-toggle-neck {
     display: block !important;
     position: absolute !important;
 }
-body span.pebble-slider.ps-wrap.ps-horizontal-type > span.ps-base > span.ps-range-rail {
-    left: 0 !important;
-    right: 0 !important;
+
+.pebble-slider.ps-horizontal-type .ps-range-sizer {
+    width: 100% !important;
+    margin: 0 !important;
 }
-body span.pebble-slider.ps-wrap.ps-horizontal-type > span.ps-base > span.ps-range-rail > span.ps-range-subrail,
-body span.pebble-slider.ps-wrap.ps-horizontal-type > span.ps-base > span.ps-range-rail > span.ps-range-subrail > span.ps-range-bar {
-    height: 100% !important;
+
+.pebble-slider.ps-horizontal-type .ps-range-limiter {
+    bottom: 0 !important;
     top: 0 !important;
 }
-body span.pebble-slider.ps-wrap.ps-horizontal-type > span.ps-base > span.ps-range-rail > span.ps-range-subrail > span.ps-range-bar {
+
+.pebble-slider.ps-horizontal-type .ps-range-bar {
+    bottom: 0 !important;
+    height: auto !important;
+    left: auto !important;
+    top: 0 !important;
     width: 150% !important;
 }
-/*
-body span.pebble-slider.ps-wrap.ps-horizontal-type > span.ps-base > span.ps-toggle-overlay > span.ps-toggle-rail {
+
+.pebble-slider.ps-horizontal-type .ps-toggle-overlay-and-limiter {
     bottom: 0 !important;
     top: 0 !important;
 }
-*/
-body span.pebble-slider.ps-wrap.ps-vertical-type > span.ps-base > span.ps-range-rail {
-    bottom: 0 !important;
-    top: 0 !important;
+
+.pebble-slider.ps-horizontal-type .ps-range-base,
+.pebble-slider.ps-horizontal-type .ps-toggle-base {
+    display: table !important;
 }
-body span.pebble-slider.ps-wrap.ps-vertical-type > span.ps-base > span.ps-range-rail > span.ps-range-subrail,
-body span.pebble-slider.ps-wrap.ps-vertical-type > span.ps-base > span.ps-range-rail > span.ps-range-subrail > span.ps-range-bar {
-    width: 100% !important;
-    left: 0 !important;
+
+.pebble-slider.ps-horizontal-type .ps-range-aligner,
+.pebble-slider.ps-horizontal-type .ps-toggle-rail {
+    display: table-cell !important;
 }
-body span.pebble-slider.ps-wrap.ps-vertical-type > span.ps-base > span.ps-range-rail > span.ps-range-subrail > span.ps-range-bar {
-    height: 150% !important;
+
+.pebble-slider.ps-horizontal-type .ps-toggle-neck {
+    bottom: auto !important;
+    right: auto !important;
+    top: auto !important;
 }
-/*
-body span.pebble-slider.ps-wrap.ps-vertical-type > span.ps-base > span.ps-toggle-overlay > span.ps-toggle-rail {
+
+.pebble-slider.ps-vertical-type .ps-range-sizer {
+    height: 100% !important;
+    margin: 0 auto !important;
+}
+
+.pebble-slider.ps-vertical-type .ps-range-limiter {
     left: 0 !important;
     right: 0 !important;
 }
-*/
+
+.pebble-slider.ps-vertical-type .ps-range-bar {
+    bottom: auto !important;
+    height: 150% !important;
+    left: 0 !important;
+    right: 0 !important;
+    width: auto !important;
+}
+
+.pebble-slider.ps-vertical-type .ps-toggle-overlay-and-limiter {
+    left: 0 !important;
+    right: 0 !important;
+}
+
+.pebble-slider.ps-vertical-type .ps-range-base,
+.pebble-slider.ps-vertical-type .ps-range-aligner,
+.pebble-slider.ps-vertical-type .ps-toggle-base,
+.pebble-slider.ps-vertical-type .ps-toggle-rail {
+    display: block !important;
+}
+
+.pebble-slider.ps-vertical-type .ps-toggle-neck {
+    bottom: auto !important;
+    left: 50% !important;
+    right: auto !important;
+}
+
+.pebble-slider.ps-horizontal-type .ps-subwrap.ps-transition .ps-range-bar {
+    transition: right 0.2s;
+    -moz-transition: right 0.2s;
+    -webkit-transition: right 0.2s;
+    -ms-transition: right 0.2s;
+    -o-transition: right 0.2s;
+}
+.pebble-slider.ps-horizontal-type .ps-subwrap.ps-transition .ps-toggle-neck {
+    transition: left 0.2s;
+    -moz-transition: left 0.2s;
+    -webkit-transition: left 0.2s;
+    -ms-transition: left 0.2s;
+    -o-transition: left 0.2s;
+}
         </style>
         <script type="text/javascript" src="jquery-1.11.3.min.js"></script>
         <script type="text/javascript" src="jquery.domxy.js"></script>
         <script type="text/javascript" src="jquery-pebble-slider.js"></script>
     </head>
     <body>
-        <p>
-            <input id="range" type="range" min="0" max="100" step="20" />
-            <script type="text/javascript">
-                var range = document.getElementById('range');
-                range.addEventListener('input', function () {
-                    console.log('input: ' + this.value);
-                }, false);
-                range.addEventListener('change', function () {
-                    console.log('change: ' + this.value);
-                }, false);
-            </script>
-        </p>
         <p id="container-3">
             <button type="button">Button</button>
             <script type="text/javascript">
@@ -276,16 +372,26 @@ body span.pebble-slider.ps-wrap.ps-vertical-type > span.ps-base > span.ps-toggle
         </p>
         <p id="container-2" style="position: absolute; height: 80%; display: block;">
             <span class="pebble-slider ps-vertical-type ps-wrap">
-                <span class="ps-base">
-                    <span class="ps-range-rail">
-                        <span class="ps-range-subrail">
-                            <span class="ps-range-bar"></span>
+                <span class="ps-subwrap">
+                    <span class="ps-range-overlay">
+                        <span class="ps-range-base">
+                            <span class="ps-range-aligner">
+                                <span class="ps-range-sizer">
+                                    <span class="ps-range-rail">
+                                        <span class="ps-range-limiter">
+                                            <span class="ps-range-bar"></span>
+                                        </span>
+                                    </span>
+                                </span>
+                            </span>
                         </span>
                     </span>
-                    <span class="ps-toggle-overlay">
-                        <span class="ps-toggle-rail">
-                            <span class="ps-toggle-neck">
-                                <span class="ps-toggle-handle"></span>
+                    <span class="ps-toggle-overlay-and-limiter">
+                        <span class="ps-toggle-base">
+                            <span class="ps-toggle-rail">
+                                <span class="ps-toggle-neck">
+                                    <span class="ps-toggle-handle"></span>
+                                </span>
                             </span>
                         </span>
                     </span>
@@ -308,5 +414,17 @@ body span.pebble-slider.ps-wrap.ps-vertical-type > span.ps-base > span.ps-toggle
             </span>
         </span>
         -->
+        <p>
+            <input id="range" type="range" min="0" max="100" step="20" />
+            <script type="text/javascript">
+                var range = document.getElementById('range');
+                range.addEventListener('input', function () {
+                    console.log('input: ' + this.value);
+                }, false);
+                range.addEventListener('change', function () {
+                    console.log('change: ' + this.value);
+                }, false);
+            </script>
+        </p>
     </body>
 </html>
