--- a/pebble-slider.html
+++ b/pebble-slider.html
@@ -12,326 +12,43 @@
                 background-color: #f0f0f0;
                 padding: 10px;
             }
-
-            .pebble-slider.ps-wrap .ps-base .ps-range-rail {
-                border: solid 1px #a0a0a0;
-            }
-
-            .pebble-slider.ps-wrap .ps-toggle-neck {
-                width: 20px;
-                height: 20px;
-                border-radius: 20px;
-            }
         </style>
-        <!-- <link rel="stylesheet" type="text/css" href="pebble-slider.css" /> -->
+        <link rel="stylesheet" type="text/css" href="pebble-slider.css" />
         <style type="text/css">
-/* Pebble Slider default styles */
-.pebble-slider {
-    background-color: pink;
-}
-
-.pebble-slider.ps-wrap .ps-range-rail {
-    border: solid 1px #a0a0a0;
-}
-
-.pebble-slider .ps-range-bar {
-    background-color: #c0c0c0;
-}
-
-.pebble-slider .ps-toggle-neck {
-    background-color: black;
-    opacity: 0.65;
-}
-
-.pebble-slider .ps-toggle-handle {
-    display: block;
-    width: 100%;
-    height: 100%;
-}
-
-.pebble-slider.ps-horizontal-type {
-    height: 20px;
-    padding: 0 10px;
-    width: 300px;
-}
-
-.pebble-slider.ps-horizontal-type .ps-range-sizer {
-    height: 50%;
-    max-height: 100%;
-}
-
-.pebble-slider.ps-horizontal-type .ps-range-limiter {
-    left: 10px;
-    right: 10px;
-}
-
-.pebble-slider.ps-horizontal-type .ps-range-bar {
-    right: 50%;
-}
-
-.pebble-slider.ps-horizontal-type .ps-toggle-overlay-and-limiter {
-    left: 10px;
-    right: 10px;
-}
-
-.pebble-slider.ps-horizontal-type .ps-toggle-neck {
-    cursor: pointer;
+.ps-horizontal-type {
     height: 40px;
-    left: 50%;
-    margin-left: -10px;
-    margin-top: -20px;
-    width: 20px;
 }
-
-.pebble-slider.ps-vertical-type {
-    height: 300px;
-    padding: 10px 0;
-    width: 20px;
+.ps-horizontal-type .ps-range-sizer {
+    height: 25%;
 }
-
-.pebble-slider.ps-vertical-type .ps-range-sizer {
-    max-width: 100%;
-    width: 50%;
+.ps-horizontal-type .ps-range-rail {
+    background-color: #f0f0f0;
+    border: none;
+    border-radius: 20px;
+    box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.2), inset 0 -1px 2px 0 rgba(255, 255, 255, 1);
 }
-
-.pebble-slider.ps-vertical-type .ps-range-limiter {
-    bottom: 10px;
-    top: 10px;
+.ps-horizontal-type .ps-range-bar {
+    background-color: #cfcfcf;
 }
-
-.pebble-slider.ps-vertical-type .ps-range-bar {
-    top: 50%;
+.ps-horizontal-type .ps-toggle-neck {
+    background-color: transparent;
+    width: 32px;
+    height: 32px;
 }
-
-.pebble-slider.ps-vertical-type .ps-toggle-overlay-and-limiter {
-    bottom: 10px;
-    top: 10px;
+.ps-horizontal-type .ps-toggle-handle {
+    background-color: #cfcfcf;
+    border: solid 1px #c0c0c0;
+    box-shadow: inset 0 -2px 1px 0 rgba(0, 0, 0, 0.3), inset 0 2px 1px 0 rgba(255, 255, 255, 0.3), 0 0 3px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    margin-top: -1px;
+    margin-left: -1px;
 }
-
-.pebble-slider.ps-vertical-type .ps-toggle-neck {
-    height: 20px;
-    margin-left: -20px;
-    margin-top: -10px;
-    top: 50%;
-    width: 40px;
-}
-
-/* Pebble Slider strictly-enforced styles */
-
-.pebble-slider {
-    display: inline-block !important;
-    position: relative !important;
-}
-
-.pebble-slider .ps-subwrap {
-    border: none !important;
-    display: block !important;
-    height: 100% !important;
-    left: 0 !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    position: absolute !important;
-    top: 0 !important;
-    width: 100% !important;
-}
-
-.pebble-slider .ps-range-overlay {
-    background: none !important;
-    border: none !important;
-    bottom: 0 !important;
-    display: block !important;
-    left: 0 !important;
-    margin: 0 !important;
-    overflow: hidden !important;
-    padding: 0 !important;
-    position: absolute !important;
-    right: 0 !important;
-    top: 0 !important;
-}
-
-.pebble-slider .ps-range-base {
-    background: none !important;
-    border: none !important;
-    height: 100% !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    width: 100% !important;
-}
-
-.pebble-slider .ps-range-aligner {
-    background: none !important;
-    border: none !important;
-    height: 100% !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    /* position relative allows 100% height */
-    position: relative !important;
-    vertical-align: middle !important;
-    width: 100% !important;
-}
-
-.pebble-slider .ps-range-sizer {
-    background: none !important;
-    border: none !important;
-    display: block !important;
-    padding: 0 !important;
-    position: relative !important;
-}
-
-.pebble-slider .ps-range-rail {
-    bottom: 0 !important;
-    display: block !important;
-    left: 0 !important;
-    height: auto !important;
-    margin: 0 !important;
-    overflow: hidden !important;
-    padding: 0 !important;
-    position: absolute !important;
-    right: 0 !important;
-    top: 0 !important;
-    width: auto !important;
-}
-
-.pebble-slider .ps-range-limiter {
-    background: none !important;
-    border: none !important;
-    display: block !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    position: absolute !important;
-}
-
-.pebble-slider .ps-range-bar {
-    display: block !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    position: absolute !important;
-}
-
-.pebble-slider .ps-toggle-overlay-and-limiter {
-    background: none !important;
-    border: none !important;
-    display: block !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    position: absolute !important;
-}
-
-.pebble-slider .ps-toggle-base {
-    background: none !important;
-    border: none !important;
-    width: 100% !important;
-    height: 100% !important;
-    margin: 0 !important;
-    padding: 0 !important;
-}
-
-.pebble-slider .ps-toggle-rail {
-    background: none !important;
-    border: none !important;
-    height: 100% !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    position: relative !important;
-    vertical-align: middle !important;
-    width: 100% !important;
-}
-
-.pebble-slider .ps-toggle-neck {
-    display: block !important;
-    position: absolute !important;
-}
-
-.pebble-slider.ps-horizontal-type .ps-range-sizer {
-    width: 100% !important;
-    margin: 0 !important;
-}
-
-.pebble-slider.ps-horizontal-type .ps-range-limiter {
-    bottom: 0 !important;
-    top: 0 !important;
-}
-
-.pebble-slider.ps-horizontal-type .ps-range-bar {
-    bottom: 0 !important;
-    height: auto !important;
-    left: auto !important;
-    top: 0 !important;
-    width: 150% !important;
-}
-
-.pebble-slider.ps-horizontal-type .ps-toggle-overlay-and-limiter {
-    bottom: 0 !important;
-    top: 0 !important;
-}
-
-.pebble-slider.ps-horizontal-type .ps-range-base,
-.pebble-slider.ps-horizontal-type .ps-toggle-base {
-    display: table !important;
-}
-
-.pebble-slider.ps-horizontal-type .ps-range-aligner,
-.pebble-slider.ps-horizontal-type .ps-toggle-rail {
-    display: table-cell !important;
-}
-
-.pebble-slider.ps-horizontal-type .ps-toggle-neck {
-    bottom: auto !important;
-    right: auto !important;
-    top: auto !important;
-}
-
-.pebble-slider.ps-vertical-type .ps-range-sizer {
-    height: 100% !important;
-    margin: 0 auto !important;
-}
-
-.pebble-slider.ps-vertical-type .ps-range-limiter {
-    left: 0 !important;
-    right: 0 !important;
-}
-
-.pebble-slider.ps-vertical-type .ps-range-bar {
-    bottom: auto !important;
-    height: 150% !important;
-    left: 0 !important;
-    right: 0 !important;
-    width: auto !important;
-}
-
-.pebble-slider.ps-vertical-type .ps-toggle-overlay-and-limiter {
-    left: 0 !important;
-    right: 0 !important;
-}
-
-.pebble-slider.ps-vertical-type .ps-range-base,
-.pebble-slider.ps-vertical-type .ps-range-aligner,
-.pebble-slider.ps-vertical-type .ps-toggle-base,
-.pebble-slider.ps-vertical-type .ps-toggle-rail {
-    display: block !important;
-}
-
-.pebble-slider.ps-vertical-type .ps-toggle-neck {
-    bottom: auto !important;
-    left: 50% !important;
-    right: auto !important;
-}
-
-.pebble-slider.ps-horizontal-type .ps-subwrap.ps-transition .ps-range-bar {
-    transition: right 0.2s;
-    -moz-transition: right 0.2s;
-    -webkit-transition: right 0.2s;
-    -ms-transition: right 0.2s;
-    -o-transition: right 0.2s;
-}
-.pebble-slider.ps-horizontal-type .ps-subwrap.ps-transition .ps-toggle-neck {
-    transition: left 0.2s;
-    -moz-transition: left 0.2s;
-    -webkit-transition: left 0.2s;
-    -ms-transition: left 0.2s;
-    -o-transition: left 0.2s;
+.ps-horizontal-type .ps-toggle-neck.active .ps-toggle-handle,
+.ps-horizontal-type .ps-toggle-neck:hover .ps-toggle-handle {
+    background-color: #d2d2d2;
 }
         </style>
+        <link rel="stylesheet" type="text/css" href="ps-es.css" />
         <script type="text/javascript" src="jquery-1.11.3.min.js"></script>
         <script type="text/javascript" src="jquery.domxy.js"></script>
         <script type="text/javascript" src="jquery-pebble-slider.js"></script>
@@ -370,7 +87,7 @@
                 });
             </script>
         </p>
-        <p id="container-2" style="position: absolute; height: 80%; display: block;">
+        <p id="container-2" style="position: relative; height: 80%; display: block; margin-top: 10px;">
             <span class="pebble-slider ps-vertical-type ps-wrap">
                 <span class="ps-subwrap">
                     <span class="ps-range-overlay">
