--- a/pebble-slider.html
+++ b/pebble-slider.html
@@ -25,10 +25,10 @@
     background-color: #f0f0f0;
     border: none;
     border-radius: 20px;
-    box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.2), inset 0 -1px 2px 0 rgba(255, 255, 255, 1);
+    box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.1), inset 0 -1px 2px 0 rgba(255, 255, 255, 1);
 }
 .ps-horizontal-type .ps-range-bar {
-    background-color: #cfcfcf;
+    background-color: #d8d8d8;
 }
 .ps-horizontal-type .ps-toggle-neck {
     background-color: transparent;
@@ -36,16 +36,16 @@
     height: 32px;
 }
 .ps-horizontal-type .ps-toggle-handle {
-    background-color: #cfcfcf;
+    background-color: #e0e0e0;
     border: solid 1px #c0c0c0;
-    box-shadow: inset 0 -2px 1px 0 rgba(0, 0, 0, 0.3), inset 0 2px 1px 0 rgba(255, 255, 255, 0.3), 0 0 3px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
+    box-shadow: inset 0 -2px 1px 0 rgba(0, 0, 0, 0.3), inset 0 2px 1px 0 rgba(255, 255, 255, 0.3), 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 32px;
     margin-top: -1px;
     margin-left: -1px;
 }
 .ps-horizontal-type .ps-toggle-neck.active .ps-toggle-handle,
 .ps-horizontal-type .ps-toggle-neck:hover .ps-toggle-handle {
-    background-color: #d2d2d2;
+    border: solid 1px #cfcfcf;
 }
         </style>
         <link rel="stylesheet" type="text/css" href="ps-es.css" />
@@ -85,19 +85,20 @@
                     console.log('change: ' + this.getValue());
                     console.log('change2: ' + value);
                 });
+                var slider2 = $.createPebbleSlider().attachTo('#container');
+                slider2.getElement().attr('id', 'slider2').width(500);
+                slider2.on('update', function () { console.log('onupdate'); });
             </script>
         </p>
         <p id="container-2" style="position: relative; height: 80%; display: block; margin-top: 10px;">
             <span class="pebble-slider ps-vertical-type ps-wrap">
                 <span class="ps-subwrap">
-                    <span class="ps-range-overlay">
-                        <span class="ps-range-base">
-                            <span class="ps-range-aligner">
-                                <span class="ps-range-sizer">
-                                    <span class="ps-range-rail">
-                                        <span class="ps-range-limiter">
-                                            <span class="ps-range-bar"></span>
-                                        </span>
+                    <span class="ps-range-base">
+                        <span class="ps-range-aligner">
+                            <span class="ps-range-sizer">
+                                <span class="ps-range-rail">
+                                    <span class="ps-range-limiter">
+                                        <span class="ps-range-bar"></span>
                                     </span>
                                 </span>
                             </span>
