--- a/pebble-slider.html
+++ b/pebble-slider.html
@@ -40,8 +40,12 @@
     border: solid 1px #c0c0c0;
     box-shadow: inset 0 -2px 1px 0 rgba(0, 0, 0, 0.3), inset 0 2px 1px 0 rgba(255, 255, 255, 0.3), 0 1px 3px 0 rgba(0, 0, 0, 0.1);
     border-radius: 32px;
+    font-size: 12px;
+    font-family: Arial;
+    line-height: 34px;
     margin-top: -1px;
     margin-left: -1px;
+    text-align: center;
 }
 .ps-horizontal-type .ps-toggle-neck.active .ps-toggle-handle,
 .ps-horizontal-type .ps-toggle-neck:hover .ps-toggle-handle {
@@ -85,10 +89,16 @@
                     console.log('change: ' + this.getValue());
                     console.log('change2: ' + value);
                 });
-                var slider2 = $.createPebbleSlider().attachTo('#container');
-                slider2.getElement().attr('id', 'slider2').width(500);
-                slider2.on('update', function () { console.log('onupdate'); });
+                var slider2 = $.createPebbleSlider().attachTo('#container'), $s2_handle = slider2.getElement().find('.ps-toggle-handle');
+                slider2.getElement().attr('id', 'slider2').width(640);
+                $s2_handle.text(slider2.val());
+                slider2.on('update', function (event, value) {
+                    $s2_handle.text(Math.floor(value));
+                    console.log(event);
+                    console.log('onupdate: ' + value);
+                });
             </script>
+
         </p>
         <p id="container-2" style="position: relative; height: 80%; display: block; margin-top: 10px;">
             <span class="pebble-slider ps-vertical-type ps-wrap">
