--- a/pebble-slider.html
+++ b/pebble-slider.html
@@ -143,13 +143,33 @@
         </span>
         -->
         <p>
-            <input id="range" type="range" min="0" max="100" step="20" />
+            <input id="range-1" type="range" min="0" max="100" step="0.1" value="50" />
             <script type="text/javascript">
-                var range = document.getElementById('range');
+                var range = document.getElementById('range-1');
                 range.addEventListener('input', function () {
                     console.log('input: ' + this.value);
                 }, false);
                 range.addEventListener('change', function () {
+                    console.log('change: ' + this.value);
+                }, false);
+            </script>
+            <input id="range-2" type="range" min="0" max="50" step="1" value="10" />
+            <script type="text/javascript">
+                var range2 = document.getElementById('range-2');
+                range2.addEventListener('input', function () {
+                    console.log('input: ' + this.value);
+                }, false);
+                range2.addEventListener('change', function () {
+                    console.log('change: ' + this.value);
+                }, false);
+            </script>
+            <input id="range-3" type="range" min="100" step="1" value="90" />
+            <script type="text/javascript">
+                var range3 = document.getElementById('range-3');
+                range3.addEventListener('input', function () {
+                    console.log('input: ' + this.value);
+                }, false);
+                range3.addEventListener('change', function () {
                     console.log('change: ' + this.value);
                 }, false);
             </script>
