--- a/pebble-slider.html
+++ b/pebble-slider.html
@@ -21,20 +21,27 @@
 .ps-horizontal-type .ps-range-sizer {
     height: 25%;
 }
+.ps-vertical-type .ps-range-rail,
 .ps-horizontal-type .ps-range-rail {
     background-color: #f0f0f0;
     border: none;
     border-radius: 20px;
     box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.1), inset 0 -1px 2px 0 rgba(255, 255, 255, 1);
 }
+.ps-vertical-type .ps-range-bar,
 .ps-horizontal-type .ps-range-bar {
     background-color: #d8d8d8;
 }
+.ps-vertical-type .ps-toggle-neck,
 .ps-horizontal-type .ps-toggle-neck {
     background-color: transparent;
     width: 32px;
     height: 32px;
 }
+.ps-vertical-type .ps-toggle-neck {
+    margin-left: -16px;
+}
+.ps-vertical-type .ps-toggle-handle,
 .ps-horizontal-type .ps-toggle-handle {
     background-color: #e0e0e0;
     border: solid 1px #c0c0c0;
@@ -47,6 +54,8 @@
     margin-left: -1px;
     text-align: center;
 }
+.ps-vertical-type .ps-toggle-neck.active .ps-toggle-handle,
+.ps-vertical-type .ps-toggle-neck:hover .ps-toggle-handle,
 .ps-horizontal-type .ps-toggle-neck.active .ps-toggle-handle,
 .ps-horizontal-type .ps-toggle-neck:hover .ps-toggle-handle {
     border: solid 1px #cfcfcf;
