--- a/pebble-slider.html
+++ b/pebble-slider.html
@@ -9,7 +9,7 @@
                 padding: 0;
             }
             body {
-                background-color: #f0f0f0;
+                background-color: #f8f8f8;
                 padding: 10px;
             }
         </style>
@@ -23,14 +23,14 @@
 }
 .ps-vertical-type .ps-range-rail,
 .ps-horizontal-type .ps-range-rail {
-    background-color: #f0f0f0;
+    background-color: #d8d8d8;
     border: none;
     border-radius: 20px;
-    box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.1), inset 0 -1px 2px 0 rgba(255, 255, 255, 1);
+    box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.05), inset 0 -1px 2px 0 rgba(255, 255, 255, 0.05);
 }
 .ps-vertical-type .ps-range-bar,
 .ps-horizontal-type .ps-range-bar {
-    background-color: #d8d8d8;
+    background-color: #99d1ff;
 }
 .ps-vertical-type .ps-toggle-neck,
 .ps-horizontal-type .ps-toggle-neck {
@@ -43,9 +43,9 @@
 }
 .ps-vertical-type .ps-toggle-handle,
 .ps-horizontal-type .ps-toggle-handle {
-    background-color: #e0e0e0;
-    border: solid 1px #c0c0c0;
-    box-shadow: inset 0 -2px 1px 0 rgba(0, 0, 0, 0.3), inset 0 2px 1px 0 rgba(255, 255, 255, 0.3), 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+    background-color: #cce8ff;
+    border: solid 1px #99d1ff;
+    box-shadow: inset 0 -2px 1px 0 rgba(0, 0, 0, 0.05), inset 0 2px 1px 0 rgba(255, 255, 255, 0.3), 0 1px 3px 0 rgba(0, 0, 0, 0.1);
     border-radius: 32px;
     font-size: 12px;
     font-family: Arial;
@@ -58,7 +58,8 @@
 .ps-vertical-type .ps-toggle-neck:hover .ps-toggle-handle,
 .ps-horizontal-type .ps-toggle-neck.active .ps-toggle-handle,
 .ps-horizontal-type .ps-toggle-neck:hover .ps-toggle-handle {
-    border: solid 1px #cfcfcf;
+    background-color: #cce8ff;
+    box-shadow: inset 0 -2px 1px 0 rgba(0, 0, 0, 0.05), inset 0 2px 1px 0 rgba(255, 255, 255, 0.3), 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 3px 1px rgba(0, 0, 0, 0.05);
 }
         </style>
         <link rel="stylesheet" type="text/css" href="ps-es.css" />
